deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monkey-head
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monkey-head
  template:
    metadata:
      labels:
        app: monkey-head
    spec:
      containers:
      - name: monkey-head
        image: monkey-head-project:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: monkey-head
spec:
  selector:
    app: monkey-head
  ports:
  - port: 8000
    targetPort: 8000
  type: ClusterIP
